@@ -1,4 +1,5 @@
 0.6.3 - currently working on
+- [#3443] Fix: getSubpart('foo') fails if there is text after the marker in the template
 - [#3442] Fix: Documentation wrong about getPrefixedMarkers
 - [#3412] Fix: db::retrieveColumnsForTable and ::getTcaForTable need to check for the existence of the table
 - [#3413] Fix: Some functions in oelib_db are missing the "static" keyword
